# lisco-paper

./: README.md  pyproject.toml  requirements.txt
src/examples/nonlinear_double_integrator/: approxMPC_cfgs.json  predictor_cfgs.json  solver_cfgs.json
src/examples/nonlinear_double_integrator/data/closed_loop_N_2500_Nsim_5_0/: Thumbs.db  nmpc_data.npz
src/examples/parametric_OP/: predictor_cfgs.json  solver_cfgs.json
src/examples/parametric_OP/data/nonconvex_100x50x50_0/: op_cfg.json
src/examples/parametric_OP/data/nonconvex_100x50x50_0/N_1000_0/: op_data.npz
src/examples/parametric_OP/data/nonconvex_100x50x50_1/: op_cfg.json
src/examples/parametric_OP/data/nonconvex_100x50x50_1/N_1000_0/: op_data.npz
src/examples/parametric_OP/data/nonconvex_100x50x50_2/: op_cfg.json
src/examples/parametric_OP/data/nonconvex_100x50x50_2/N_1000_0/: op_data.npz
src/examples/parametric_OP/data/nonconvex_100x50x50_3/: op_cfg.json
src/examples/parametric_OP/data/nonconvex_100x50x50_3/N_1000_0/: op_data.npz
src/examples/parametric_OP/data/nonconvex_100x50x50_4/: op_cfg.json
src/examples/parametric_OP/data/nonconvex_100x50x50_4/N_1000_0/: op_data.npz
